<resources>
    <string name="app_name" translatable="false">Material Player</string>
    <string name="tracks">Tracks</string>
    <string name="artists">Artists</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="library">Library</string>
    <string name="playlist">Playlist</string>
    <string name="equalizer">Equalizer</string>
    <string name="settings">Settings</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="sort_order_az">A-Z</string>
    <string name="sort_order_za">Z-A</string>
    <string name="sort_order_album">Album</string>
    <string name="sort_order_artist">Artist</string>
    <string name="sort_order_title">Title</string>
    <string name="sort_order_year">Year</string>
    <string name="sort_order_duration">Duration</string>
    <string name="reversed">Reversed</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_order_no_of_tracks">No. of Tracks</string>
    <string name="sort_order_no_of_albums">No. of Albums</string>
    <string name="sort_by_album">Album</string>
    <string name="song">song</string>
    <string name="songs">songs</string>
    <string name="search">Search</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="folders">Folders</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="now_playing">Now Playing</string>
    <string name="simple_music_widget">Simple Music Widget</string>
</resources>
