<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort_by"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="2"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/groupSong"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_title"
                    android:title="@string/sort_order_title"
                    android:checked="true"/>

                <item
                    android:id="@+id/sort_by_album"
                    android:title="@string/sort_order_album"/>

                <item
                    android:id="@+id/sort_by_artist"
                    android:title="@string/sort_order_artist"/>

                <item
                    android:id="@+id/sort_by_year"
                    android:title="@string/sort_order_year"/>

                <item
                    android:id="@+id/sort_by_duration"
                    android:title="@string/sort_order_duration"/>
            </group>
            <item
                android:id="@+id/action_reversed"
                android:title="@string/reversed"
                android:checkable="true"/>
        </menu>
    </item>
</menu>